# typed-htmx

./: .editorconfig  .gitignore  .prettierignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml  sgconfig.yml  tsconfig.esm.json  tsconfig.json  typedoc.json
.github/workflows/: docs.yml  test.yml
docs/: docusaurus.config.js  package.json  pnpm-lock.yaml  sidebars.js  typedoc.json
docs/docs/howto/: intro.md  xternal.md
docs/src/components/HomepageFeatures/: index.js
docs/src/css/: custom.css
docs/src/pages/: index.js
example/: README.md  index.jsx  package.json  pnpm-lock.yaml  tsconfig.hono.json  tsconfig.json
example/src/: types.d.ts
rules/: no-extensionless-relative-import.yml
scripts/: dist.sh  release.sh
src/: index.ts  jsx.d.ts
src/typed-html/: jsx-dev-runtime.ts  jsx-runtime.ts
tests/static-jsx/: jest.config.js  main.test.js  main.test.jsx  package.json  pnpm-lock.yaml  tsconfig.json
