[tool.poetry]
name = "typed-htmx-docs"
version = "0.1.0"
description = ""
authors = ["Viet Dinh <54ckb0y789@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.1.21"
pymdown-extensions = "^10.1"
Pygments = "^2.15.1"
Markdown = "^3.4.4"
jsx-lexer = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true
